# stillalive

./: Cargo.toml  convert.py  stillalive.mid
.cargo/: config.toml
src/: frequencies.rs  main.rs  speaker.rs
