[package]
name = "stillalive"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
cmos-rtc = "0.1.2"
x86_64 = "0.14.11"
midly = { version = "0.5.3", default-features = false, features = ["strict", "alloc"] }
buddy_system_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]